# tintindb

./: Cargo.toml  README.md
docs/: arch1.md  arch2.md  arch3.md  arch4.md
src/: main.rs
src/config/: config.rs
src/dtos/request/: add.rs  mod.rs  search.rs
src/dtos/response/: add.rs
src/http/: server.rs
src/index/: catman.rs  metadata.rs  mod.rs  persistance.rs  writer.rs
src/tokenizer/: stemmer.rs  tokenizer.rs
website/: sidebars.json  siteConfig.js
website/i18n/: en.json
website/pages/en/: index.js
