[package]
name = "tintindb"
version = "0.1.0"
authors = ["isubasinghe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = {version="0.15.0", default-features=false, features=["lz4"]}
fst = {version ="0.4.5", default-features=false, features=["levenshtein"]}
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.1"
actix-web = "3.3.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
simd-json = "0.3.23"
toml = "0.5.8"
bincode = "1.3.1"
byteorder = "1.3.4"
unicode-segmentation = "1.7.1"
rust-stemmers = "1.2.0"
lazy_static = "1.4.0"
hashbrown = {version = "0.9.1", features=["serde", "rayon", "inline-more"]}
clap = "3.0.0-beta.2"
rayon = "1.5.0"
fnv = "1.0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1
